# TartanHacks2022

./: .gitignore  README.md  pyproject.toml  test.py
snapsync/: db.sqlite3  manage.py  requirement.txt
snapsync-old/src/: main.py  painter.py  params.py  tagger.py
snapsync/main/: admin.py  models.py  views.py
snapsync/main/migrations/: 0001_initial.py
snapsync/snapsync/: asgi.py  settings.py  urls.py  wsgi.py
snapsync/static/: custom.css
snapsync/static/bootstrap/css/: bootstrap-grid.rtl.min.css  bootstrap.min.css
snapsync/templates/: base.html  home.html  navbar.html  photo.html  upload_moment.html  welcome.html
snapsync/templates/registration/: login.html  signup.html
src/: .tag_faces.py.swp  filter_faces.py  find_faces.py  label_faces.py  labeler.py  main.py  params.py  tag_faces.py  tagger.py  test.py
website/partygram/: db.sqlite3  manage.py
website/partygram/main/: admin.py  models.py  views.py
website/partygram/main/migrations/: 0001_initial.py  0002_face_identification_moment_remove_image_people_and_more.py  0002_profile_pfp.py  0003_remove_moment_tagged.py  0003_rename_person_encoding_user_alter_profile_id_and_more.py  0004_alter_profile_pfp.py  0004_tagged.py  (+4 more)
website/partygram/media/: IMG_0076.HEIC
website/partygram/partygram/: asgi.py  settings.py  urls.py  wsgi.py
website/partygram/static/: custom.css
website/partygram/templates/: base.html  home.html  navbar.html  profile.html  trash.html  upload.html  upload_moment.html  welcome.html
website_old/partygram/partygram/: asgi.py  settings.py  urls.py  wsgi.py
(+12 files in other folders)
