[tool.poetry]
name = "tartanhacks2022"
version = "0.1.0"
description = ""
authors = ["Siyuan Daniel Chen <siyuanc2@andrew.cmu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
face-recognition = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
